# cmake-distinct-compilers

./: CMakeLists.txt  README.md  build.sh
subproject01/: CMakeLists.txt  subproject01.c
subproject02/: CMakeLists.txt  subproject02.cpp
